--- a/style.css
+++ b/style.css
@@ -62,8 +62,9 @@ header {
     width: 30px;
     height: 3px;
     background: white;
-    margin: 5px 0;
+    margin: 3px 0;
     transition: 0.3s ease;
+    border-radius: 1px;
 }
 
 /* Responsive Design */
@@ -75,7 +76,7 @@ header {
         top: 60px;
         left: 0;
         width: 100%;
-        background: #333;
+        background: #B3D8A8;
         text-align: center;
     }
 
@@ -101,6 +102,20 @@ main {
     padding: 80px;
 }
 
+@media screen and (max-width: 1000px) {
+    /* main{
+        padding-left: 10px;
+        padding-right: 10px;
+    } */
+    .skills .box-contain{
+        display: flex;
+        flex-direction: column;
+    }
+    .skills{
+        padding: 30px 10px 70px 10px;
+    }
+}
+
 main .contain {
     width: 100%;
     max-width: 100vw;
@@ -113,8 +128,51 @@ main .contain {
     padding: 40px;
 }
 
+@media screen and (max-width: 600px) {
+    .details{
+        width: 100%;
+    }
+    main{
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .contain{
+        padding-left: 1px;
+        padding-right: 1px;
+    }
+    .img-contain{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    main .contain{
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        padding-bottom: 20px;
+        text-align: center;
+    }
+    main{
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    .details{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .contain .img-contain {
+        padding-right: 0px;
+        /* background: red; */
+    }
+    .box-contain .skills-box{
+        height: 300px;
+    }
+}
+
 .contain .img-contain {
-    width: 30vw;
+    width: auto;
     display: flex;
     justify-content: flex-end;
     padding-right: 30px;
@@ -126,9 +184,10 @@ main .contain .imgs {
     height: 260px;
     border-radius: 50%;
     border: 2px solid #3D8D7A;
-    padding: 2px;
+    padding: 4px;
     position: relative;
-    animation: jump 3s infinite ease-out;
+    animation: jump 3s infinite ease-in-out;
+    background: white;
 
 }
 
@@ -153,7 +212,7 @@ main .contain .imgs {
 
 .contain .details {
     padding: 20px 0 20px 0;
-    width: 60vw;
+    width: auto;
     /* background: yellow; */
 }
 
@@ -181,7 +240,7 @@ main .contain .imgs {
     margin-top: 80px;
     width: 100%;
     max-width: 100vw;
-    /* height: 80vh; */
+    height: auto;
     background: #FBFFE4;
     padding: 30px 60px 70px 60px;
     border-radius: 10px;
@@ -189,7 +248,6 @@ main .contain .imgs {
 
 .skills .box-contain {
     display: flex;
-    flex-direction: row;
     text-align: center;
     margin-top: 50px;
     gap: 20px;
@@ -230,6 +288,10 @@ footer {
 .footer-logo h2 {
     font-size: 24px;
     margin-bottom: 5px;
+}
+
+.footer-logo h2:hover{
+    text-decoration: underline;
 }
 
 .footer-logo p {
